[package]
name = "keyberon-pokerii"
description = "Keyberon based firmware for the ikbc New Poker II"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
rtic = { workspace = true}
rtic-monotonics = { workspace = true }
rtic-sync = { workspace = true }
defmt = { workspace = true }
defmt-brtt = { workspace = true }
panic-reset = { workspace = true }
usb-device = { workspace = true }
keyberon = { workspace = true }
ht32f1yyy-hal = { workspace = true, features = ["ht32f1654"]}
